# gravity-ng

./: .gitignore  CMakeLists (fedora's conflicted copy 2015-01-06).txt  CMakeLists.txt
cmake/: FindCEGUI.cmake  FindFreetype.cmake  FindGLEW.cmake  FindJsonCpp.cmake  FindLogog.cmake  FindMyGUI.cmake  FindPhysFS.cmake  FindSDL_gpu.cmake  FindYamlCpp.cmake
data/bodies/: bullet.json  ship.json
data/cegui/layouts/: gravity_startup.layout
data/entities/: ship.json
data/models/: ship.json
data/models/planets/simple/: simple.yml
data/models/ships/interceptor-0/: interceptor-0.yml
data/models/ships/test-0/: test-0.yml
extlibs/nanosvg/: nanosvg.c  nanosvg.h
extlibs/physfs/include/: physfs.hpp
extlibs/physfs/src/: physfs.cpp
extlibs/poly2tri/common/: utils.h
include/gravity/: gravity.hpp  logging.hpp  util.hpp  windows.hpp
include/gravity/cgame/: camera.hpp  display.hpp  rgb.hpp  vectorpath.hpp
include/gravity/cgame/asset/: model.hpp  modelasset.hpp
include/gravity/cgame/component/: graphics.hpp
include/gravity/cgame/renderer/: glrenderer.hpp  irenderer.hpp  nvgrenderer.hpp  sdlrenderer.hpp
include/gravity/cgame/resource/: model.hpp  shadersource.hpp
include/gravity/cgame/triangulator/: debugtriangulator.hpp  itriangulator.hpp  standardtriangulator.hpp
include/gravity/cgame/ui/: ceguiphysfsresourceprovider.hpp  ui.hpp
include/gravity/dev/: casteljau.hpp
include/gravity/game/: entity.hpp  logging.hpp  world.hpp
include/gravity/game/asset/: body.hpp  bodyasset.hpp  iasset.hpp  svgasset.hpp  textasset.hpp  yamlasset.hpp
include/gravity/game/component/: icomponent.hpp  physics.hpp
include/gravity/game/geometry_/: ishape.hpp  triangle.hpp
include/gravity/game/resource/: basicresource.hpp  body.hpp  resource.hpp  resourceloader.hpp  resourcemanager.hpp
include/gravity/game/resource/inline/: resourcemanager.inl
src/cgame/: camera.cpp  display.cpp
src/cgame/asset/: model.cpp  modelasset.cpp
src/cgame/component/: graphics.cpp
src/cgame/renderer/: glrenderer.cpp  glrenderer.cpp (Marcin-Laptop's conflicted copy 2014-03-13).autosave  nvgrenderer.cpp  sdlrenderer.cpp
src/cgame/resource/: model.cpp  shadersource.cpp
src/cgame/ui/: ceguiphysfsresourceprovider.cpp  ui.cpp
src/client/: main.cpp
src/dev/: casteljau.cpp
src/game/: entity.cpp  game.cpp  logging.cpp
src/game/asset/: body.cpp  bodyasset.cpp  svgasset.cpp  yamlasset.cpp
src/game/component/: physics.cpp
src/game/geometry/: triangle.cpp
src/game/resource/: basicresource.cpp  body.cpp  resource.cpp  resourceloader.cpp  resourcemanager.cpp
src/server/: main.cpp
tools/: correct_headers.py  valgrind-suppressions.supp  vmware.supp
